fix: guardian PID lock + rate-limited Ollama pacing